pod-pvc.yaml
apiVersion: v1
kind: Pod
metadata:
  name: pod-demo
spec:
  containers:
    - name: app
      image: nginx
      ports:
        - containerPort: 80
      volumeMounts:
        - mountPath: "/usr/share/nginx/html"
          name: demo-storage
  volumes:
    - name: demo-storage
      persistentVolumeClaim:
        claimName: manual-disk-pvc
