pod-sc.yaml
apiVersion: v1
kind: Pod
metadata:
  name: ebs-pod1
spec:
  containers:
    - name: app
      image: nginx
      ports:
        - containerPort: 80
      volumeMounts:
        - name: ebs-storage
          mountPath: /usr/share/nginx/html
  volumes:
    - name: ebs-storage
      persistentVolumeClaim:
        claimName: ebs-pvc
