service.yaml
  apiVersion: v1
  kind: Service
  metadata:
    name: my-webapp-service
  spec:
    type: LoadBalancer
    selector:
      app: my-webapp
    
    ports:
      - port: 80
        targetPort: 80
        nodePort: 30007
